--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="site-header-wrapper">
         <a class="site-logo-link" href="#">
-          <svg class="site-logo" width="139" height="20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="site-logo" width="139" height="20" xmlns="http://www.w3.org/2000/svg">
             <g fill-rule="evenodd" clip-rule="evenodd">
               <path
                 d="M91.2953 15.8461c3.5005 0 5.9731-2.5149 5.9731-6.048 0-3.533-2.4726-6.0478-5.9731-6.0478-1.0513.0002-2.0113.2813-2.825.7838V0h-3.8712v15.4737h2.8977l.3693-.844c.9236.7716 2.1025 1.2164 3.4292 1.2164Zm-26.6048 0c3.0208.0002 5.0259-1.5545 5.0259-3.9303 0-2.8341-2.3076-3.2429-4.0918-3.5589l-.0918-.0163-.0225-.004c-1.0695-.1907-1.927-.3436-1.927-.986 0-.527.4217-.8378 1.0495-.8378.7095 0 1.1975.3375 1.1975 1.0634h3.6669c-.0446-2.3036-1.9208-3.8436-4.8158-3.8436-2.9128 0-4.8547 1.4712-4.8547 3.75 0 2.7572 2.3368 3.2892 4.0996 3.5749 1.0922.1806 1.9528.3676 1.9528 1.0233 0 .5876-.5429.8798-1.1158.8798-.7425 0-1.3212-.3827-1.3212-1.2141H59.673c.0358 2.4632 1.919 4.0996 5.0175 4.0996Zm-20.9846-4.2152c-.8 2.5946-3.0998 4.2156-5.952 4.2156-3.5472 0-6.175-2.5926-6.175-6.0657 0-3.4852 2.6068-6.048 6.175-6.048 3.6644 0 6.2017 2.6144 6.2014 5.9493 0 .3425-.0299.6851-.0808 1.0366H35.433c.2562 1.304 1.0844 1.9784 2.3209 1.9784.9147 0 1.6789-.4007 2.0553-1.0662h3.8967Zm-8.2038-3.0806h4.5958c-.3436-1.1362-1.1626-1.7492-2.3442-1.7492-1.1413 0-1.9348.62-2.2516 1.7492Zm15.5419 7.296c1.3204 0 2.4993-.4345 3.4303-1.1886l.3354.804h3.0271V4.0933l-2.9185-.0003-.4006.8792c-.9388-.7745-2.1348-1.2217-3.4737-1.2217-3.4762 0-5.9611 2.506-5.9611 6.0268 0 3.533 2.4849 6.069 5.9611 6.069Zm-2.0213-6.06c0 1.4846 1.0781 2.5929 2.5449 2.5929 1.4667 0 2.5448-1.1083 2.5448-2.5929 0-1.4756-1.0781-2.5838-2.5448-2.5838-1.4756 0-2.5449 1.1082-2.5449 2.5838Zm29.6448 5.1815c-1.5324 3.4794-2.941 4.7362-5.8764 4.7362h-1.3408v-3.3646h1.0768c1.4981 0 1.9499-.3901 2.4804-1.8049L70.3097 4.1053h4.2551l2.4126 6.2625 2.2483-6.2625h4.2067l-4.7649 10.8625Zm9.5592-5.1697c0 1.4724 1.0781 2.5806 2.5448 2.5806 1.4577 0 2.5449-1.1082 2.5449-2.5806 0-1.4846-1.0781-2.5928-2.5449-2.5928-1.4667 0-2.5448 1.1082-2.5448 2.5928Zm16.1433 6.0482c1.321 0 2.5-.4345 3.431-1.1886l.335.804h3.027V4.0933l-2.918-.0003-.401.8792c-.939-.7745-2.135-1.2217-3.474-1.2217-3.476 0-5.9608 2.506-5.9608 6.0268 0 3.533 2.4848 6.069 5.9608 6.069Zm-2.021-6.06c0 1.4846 1.078 2.5929 2.545 2.5929 1.467 0 2.545-1.1083 2.545-2.5929 0-1.4756-1.078-2.5838-2.545-2.5838-1.476 0-2.545 1.1082-2.545 2.5838Zm15.197 5.6874V9.403c0-1.447.703-2.2998 1.924-2.2998.986 0 1.483.6564 1.483 1.9795v6.391h3.915v-6.932c0-2.8964-1.734-4.7727-4.374-4.7727-1.47 0-2.732.5653-3.578 1.5085l-.538-1.1722h-2.747v11.3684h3.915Zm13.749-4.8076v4.8076h-3.916V0h3.916v8.559l2.708-4.4537h4.397l-3.543 5.4183 3.902 5.9501h-4.616l-2.848-4.8076Z"
@@ -119,37 +119,46 @@
           <div class="site-articles-card">
             <img class="site-articles-card-img" src="img/money.png" alt="money"
               srcset="img/money.png 1x, img/money@2x.png 2x" width="255" height="200">
-            <p class="copyright-text">By Claire Robinson</p>
-            <h3 class="site-articles-card-title">Receive money in any currency with no fees</h3>
-            <p class="site-articles-card-text">The world is getting smaller and we’re becoming more mobile. So why
-              should you be forced to only receive money in a single …</p>
+            <div class="site-articles-text-wrapper">
+              <p class="copyright-text">By Claire Robinson</p>
+              <h3 class="site-articles-card-title">Receive money in any currency with no fees</h3>
+              <p class="site-articles-card-text">The world is getting smaller and we’re becoming more mobile. So why
+                should you be forced to only receive money in a single …</p>
+            </div>
           </div>
 
           <div class="site-articles-card">
             <img class="site-articles-card-img" src="img/restaraunt.png" alt="Simple budgeting"
               srcset="img/restaraunt.png 1x, img/restaraunt@2x.png 2x" width="255" height="200">
-            <p class="copyright-text">By Wilson Hutton</p>
-            <h3 class="site-articles-card-title">Treat yourself without worrying about money</h3>
-            <p class="site-articles-card-text">Our simple budgeting feature allows you to separate out your spending and
-              set realistic limits each month. That means you …</p>
+            <div class="site-articles-text-wrapper">
+              <p class="copyright-text">By Wilson Hutton</p>
+              <h3 class="site-articles-card-title">Treat yourself without worrying about money</h3>
+              <p class="site-articles-card-text">Our simple budgeting feature allows you to separate out your spending
+                and
+                set realistic limits each month. That means you …</p>
+            </div>
           </div>
 
           <div class="site-articles-card">
             <img class="site-articles-card-img" src="img/Airplane.png" alt="airplane"
               srcset="img/airplane.png 1x, img/airplane@2x.png 2x" width="255" height="200">
-            <p class="copyright-text">By Wilson Hutton</p>
-            <h3 class="site-articles-card-title">Take your Easybank card wherever you go</h3>
-            <p class="site-articles-card-text">We want you to enjoy your travels. This is why we don’t charge any fees
-              on purchases while you’re abroad. We’ll even show you …</p>
+            <div class="site-articles-text-wrapper">
+              <p class="copyright-text">By Wilson Hutton</p>
+              <h3 class="site-articles-card-title">Take your Easybank card wherever you go</h3>
+              <p class="site-articles-card-text">We want you to enjoy your travels. This is why we don’t charge any fees
+                on purchases while you’re abroad. We’ll even show you …</p>
+            </div>
           </div>
 
           <div class="site-articles-card">
             <img class="site-articles-card-img" src="img/convenience.png" alt="open api"
               srcset="img/convenience.png 1x, img/convenience@2x.png 2x" width="255" height="200">
-            <p class="copyright-text">By Claire Robinson</p>
-            <h3 class="site-articles-card-title">Our invite-only Beta accounts are now live!</h3>
-            <p class="site-articles-card-text">After a lot of hard work by the whole team, we’re excited to launch our
-              closed beta. It’s easy to request an invite through the site ...</p>
+            <div class="site-articles-text-wrapper">
+              <p class="copyright-text">By Claire Robinson</p>
+              <h3 class="site-articles-card-title">Our invite-only Beta accounts are now live!</h3>
+              <p class="site-articles-card-text">After a lot of hard work by the whole team, we’re excited to launch our
+                closed beta. It’s easy to request an invite through the site ...</p>
+            </div>
           </div>
 
         </div>
@@ -161,34 +170,38 @@
     <div class="container">
       <div class="site-footer-wrapper">
         <div class="site-logo-networks-link-box">
-          <svg class="site-logo" width="139" height="20" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g fill-rule="evenodd" clip-rule="evenodd">
-              <path
-                d="M91.2953 15.8461c3.5005 0 5.9731-2.5149 5.9731-6.048 0-3.533-2.4726-6.0478-5.9731-6.0478-1.0513.0002-2.0113.2813-2.825.7838V0h-3.8712v15.4737h2.8977l.3693-.844c.9236.7716 2.1025 1.2164 3.4292 1.2164Zm-26.6048 0c3.0208.0002 5.0259-1.5545 5.0259-3.9303 0-2.8341-2.3076-3.2429-4.0918-3.5589l-.0918-.0163-.0225-.004c-1.0695-.1907-1.927-.3436-1.927-.986 0-.527.4217-.8378 1.0495-.8378.7095 0 1.1975.3375 1.1975 1.0634h3.6669c-.0446-2.3036-1.9208-3.8436-4.8158-3.8436-2.9128 0-4.8547 1.4712-4.8547 3.75 0 2.7572 2.3368 3.2892 4.0996 3.5749 1.0922.1806 1.9528.3676 1.9528 1.0233 0 .5876-.5429.8798-1.1158.8798-.7425 0-1.3212-.3827-1.3212-1.2141H59.673c.0358 2.4632 1.919 4.0996 5.0175 4.0996Zm-20.9846-4.2152c-.8 2.5946-3.0998 4.2156-5.952 4.2156-3.5472 0-6.175-2.5926-6.175-6.0657 0-3.4852 2.6068-6.048 6.175-6.048 3.6644 0 6.2017 2.6144 6.2014 5.9493 0 .3425-.0299.6851-.0808 1.0366H35.433c.2562 1.304 1.0844 1.9784 2.3209 1.9784.9147 0 1.6789-.4007 2.0553-1.0662h3.8967Zm-8.2038-3.0806h4.5958c-.3436-1.1362-1.1626-1.7492-2.3442-1.7492-1.1413 0-1.9348.62-2.2516 1.7492Zm15.5419 7.296c1.3204 0 2.4993-.4345 3.4303-1.1886l.3354.804h3.0271V4.0933l-2.9185-.0003-.4006.8792c-.9388-.7745-2.1348-1.2217-3.4737-1.2217-3.4762 0-5.9611 2.506-5.9611 6.0268 0 3.533 2.4849 6.069 5.9611 6.069Zm-2.0213-6.06c0 1.4846 1.0781 2.5929 2.5449 2.5929 1.4667 0 2.5448-1.1083 2.5448-2.5929 0-1.4756-1.0781-2.5838-2.5448-2.5838-1.4756 0-2.5449 1.1082-2.5449 2.5838Zm29.6448 5.1815c-1.5324 3.4794-2.941 4.7362-5.8764 4.7362h-1.3408v-3.3646h1.0768c1.4981 0 1.9499-.3901 2.4804-1.8049L70.3097 4.1053h4.2551l2.4126 6.2625 2.2483-6.2625h4.2067l-4.7649 10.8625Zm9.5592-5.1697c0 1.4724 1.0781 2.5806 2.5448 2.5806 1.4577 0 2.5449-1.1082 2.5449-2.5806 0-1.4846-1.0781-2.5928-2.5449-2.5928-1.4667 0-2.5448 1.1082-2.5448 2.5928Zm16.1433 6.0482c1.321 0 2.5-.4345 3.431-1.1886l.335.804h3.027V4.0933l-2.918-.0003-.401.8792c-.939-.7745-2.135-1.2217-3.474-1.2217-3.476 0-5.9608 2.506-5.9608 6.0268 0 3.533 2.4848 6.069 5.9608 6.069Zm-2.021-6.06c0 1.4846 1.078 2.5929 2.545 2.5929 1.467 0 2.545-1.1083 2.545-2.5929 0-1.4756-1.078-2.5838-2.545-2.5838-1.476 0-2.545 1.1082-2.545 2.5838Zm15.197 5.6874V9.403c0-1.447.703-2.2998 1.924-2.2998.986 0 1.483.6564 1.483 1.9795v6.391h3.915v-6.932c0-2.8964-1.734-4.7727-4.374-4.7727-1.47 0-2.732.5653-3.578 1.5085l-.538-1.1722h-2.747v11.3684h3.915Zm13.749-4.8076v4.8076h-3.916V0h3.916v8.559l2.708-4.4537h4.397l-3.543 5.4183 3.902 5.9501h-4.616l-2.848-4.8076Z"
-                fill="#2D314D" />
-              <path d="M10.8025 0 0 19.704h5.986L16.7886 0h-5.986Z" fill="url(#a)" />
-              <path opacity=".5" d="M18.1709 0 7.3684 19.704h5.9861L24.157 0h-5.9861Z" fill="url(#b)" />
-              <path opacity=".15" d="M25.5393 0 14.7368 19.704h5.9861L31.5254 0h-5.9861Z" fill="url(#c)" />
-            </g>
-            <defs>
-              <linearGradient id="a" x1="5.1327" y1="-7.4221" x2="-10.1946" y2="9.9128" gradientUnits="userSpaceOnUse">
-                <stop stop-color="#33D35E" />
-                <stop offset="1" stop-color="#2AB6D9" />
-              </linearGradient>
-              <linearGradient id="b" x1="12.5011" y1="-7.4221" x2="-2.8262" y2="9.9128" gradientUnits="userSpaceOnUse">
-                <stop stop-color="#33D35E" />
-                <stop offset="1" stop-color="#2AB6D9" />
-              </linearGradient>
-              <linearGradient id="c" x1="19.8695" y1="-7.4221" x2="4.5422" y2="9.9128" gradientUnits="userSpaceOnUse">
-                <stop stop-color="#33D35E" />
-                <stop offset="1" stop-color="#2AB6D9" />
-              </linearGradient>
-            </defs>
-          </svg>
+          <a class="site-logo-link" href="#">
+            <svg class="site-logo" width="139" height="20" xmlns="http://www.w3.org/2000/svg">
+              <g fill-rule="evenodd" clip-rule="evenodd">
+                <path
+                  d="M91.2953 15.8461c3.5005 0 5.9731-2.5149 5.9731-6.048 0-3.533-2.4726-6.0478-5.9731-6.0478-1.0513.0002-2.0113.2813-2.825.7838V0h-3.8712v15.4737h2.8977l.3693-.844c.9236.7716 2.1025 1.2164 3.4292 1.2164Zm-26.6048 0c3.0208.0002 5.0259-1.5545 5.0259-3.9303 0-2.8341-2.3076-3.2429-4.0918-3.5589l-.0918-.0163-.0225-.004c-1.0695-.1907-1.927-.3436-1.927-.986 0-.527.4217-.8378 1.0495-.8378.7095 0 1.1975.3375 1.1975 1.0634h3.6669c-.0446-2.3036-1.9208-3.8436-4.8158-3.8436-2.9128 0-4.8547 1.4712-4.8547 3.75 0 2.7572 2.3368 3.2892 4.0996 3.5749 1.0922.1806 1.9528.3676 1.9528 1.0233 0 .5876-.5429.8798-1.1158.8798-.7425 0-1.3212-.3827-1.3212-1.2141H59.673c.0358 2.4632 1.919 4.0996 5.0175 4.0996Zm-20.9846-4.2152c-.8 2.5946-3.0998 4.2156-5.952 4.2156-3.5472 0-6.175-2.5926-6.175-6.0657 0-3.4852 2.6068-6.048 6.175-6.048 3.6644 0 6.2017 2.6144 6.2014 5.9493 0 .3425-.0299.6851-.0808 1.0366H35.433c.2562 1.304 1.0844 1.9784 2.3209 1.9784.9147 0 1.6789-.4007 2.0553-1.0662h3.8967Zm-8.2038-3.0806h4.5958c-.3436-1.1362-1.1626-1.7492-2.3442-1.7492-1.1413 0-1.9348.62-2.2516 1.7492Zm15.5419 7.296c1.3204 0 2.4993-.4345 3.4303-1.1886l.3354.804h3.0271V4.0933l-2.9185-.0003-.4006.8792c-.9388-.7745-2.1348-1.2217-3.4737-1.2217-3.4762 0-5.9611 2.506-5.9611 6.0268 0 3.533 2.4849 6.069 5.9611 6.069Zm-2.0213-6.06c0 1.4846 1.0781 2.5929 2.5449 2.5929 1.4667 0 2.5448-1.1083 2.5448-2.5929 0-1.4756-1.0781-2.5838-2.5448-2.5838-1.4756 0-2.5449 1.1082-2.5449 2.5838Zm29.6448 5.1815c-1.5324 3.4794-2.941 4.7362-5.8764 4.7362h-1.3408v-3.3646h1.0768c1.4981 0 1.9499-.3901 2.4804-1.8049L70.3097 4.1053h4.2551l2.4126 6.2625 2.2483-6.2625h4.2067l-4.7649 10.8625Zm9.5592-5.1697c0 1.4724 1.0781 2.5806 2.5448 2.5806 1.4577 0 2.5449-1.1082 2.5449-2.5806 0-1.4846-1.0781-2.5928-2.5449-2.5928-1.4667 0-2.5448 1.1082-2.5448 2.5928Zm16.1433 6.0482c1.321 0 2.5-.4345 3.431-1.1886l.335.804h3.027V4.0933l-2.918-.0003-.401.8792c-.939-.7745-2.135-1.2217-3.474-1.2217-3.476 0-5.9608 2.506-5.9608 6.0268 0 3.533 2.4848 6.069 5.9608 6.069Zm-2.021-6.06c0 1.4846 1.078 2.5929 2.545 2.5929 1.467 0 2.545-1.1083 2.545-2.5929 0-1.4756-1.078-2.5838-2.545-2.5838-1.476 0-2.545 1.1082-2.545 2.5838Zm15.197 5.6874V9.403c0-1.447.703-2.2998 1.924-2.2998.986 0 1.483.6564 1.483 1.9795v6.391h3.915v-6.932c0-2.8964-1.734-4.7727-4.374-4.7727-1.47 0-2.732.5653-3.578 1.5085l-.538-1.1722h-2.747v11.3684h3.915Zm13.749-4.8076v4.8076h-3.916V0h3.916v8.559l2.708-4.4537h4.397l-3.543 5.4183 3.902 5.9501h-4.616l-2.848-4.8076Z"
+                  fill="#fff" />
+                <path d="M10.8025 0 0 19.704h5.986L16.7886 0h-5.986Z" fill="url(#a)" />
+                <path opacity=".5" d="M18.1709 0 7.3684 19.704h5.9861L24.157 0h-5.9861Z" fill="url(#b)" />
+                <path opacity=".15" d="M25.5393 0 14.7368 19.704h5.9861L31.5254 0h-5.9861Z" fill="url(#c)" />
+              </g>
+              <defs>
+                <linearGradient id="a" x1="5.1327" y1="-7.4221" x2="-10.1946" y2="9.9128"
+                  gradientUnits="userSpaceOnUse">
+                  <stop stop-color="#33D35E" />
+                  <stop offset="1" stop-color="#2AB6D9" />
+                </linearGradient>
+                <linearGradient id="b" x1="12.5011" y1="-7.4221" x2="-2.8262" y2="9.9128"
+                  gradientUnits="userSpaceOnUse">
+                  <stop stop-color="#33D35E" />
+                  <stop offset="1" stop-color="#2AB6D9" />
+                </linearGradient>
+                <linearGradient id="c" x1="19.8695" y1="-7.4221" x2="4.5422" y2="9.9128" gradientUnits="userSpaceOnUse">
+                  <stop stop-color="#33D35E" />
+                  <stop offset="1" stop-color="#2AB6D9" />
+                </linearGradient>
+              </defs>
+            </svg>
+          </a>
 
           <div class="site-footer-networks">
             <a class="network-link" href="#">
-              <svg class="network-icon" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
+              <svg class="network-icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.323-.593 1.323-1.325V1.325C24 .593 23.407 0 22.675 0Z"
                   fill="#fff" /></svg>
@@ -203,21 +216,21 @@
             </a>
 
             <a class="network-link" href="#">
-              <svg class="network-icon" width="20" height="16" xmlns="http://www.w3.org/2000/svg">
+              <svg class="network-icon" width="24" height="20" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M24 2.557a9.83 9.83 0 0 1-2.828.775A4.932 4.932 0 0 0 23.337.608a9.864 9.864 0 0 1-3.127 1.195A4.916 4.916 0 0 0 16.616.248c-3.179 0-5.515 2.966-4.797 6.045A13.978 13.978 0 0 1 1.671 1.149a4.93 4.93 0 0 0 1.523 6.574 4.903 4.903 0 0 1-2.229-.616c-.054 2.281 1.581 4.415 3.949 4.89a4.935 4.935 0 0 1-2.224.084 4.928 4.928 0 0 0 4.6 3.419A9.9 9.9 0 0 1 0 17.54a13.94 13.94 0 0 0 7.548 2.212c9.142 0 14.307-7.721 13.995-14.646A10.025 10.025 0 0 0 24 2.557Z"
                   fill="#fff" /></svg>
             </a>
 
             <a class="network-link" href="#">
-              <svg class="network-icon" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
+              <svg class="network-icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M12 0C5.373 0 0 5.372 0 12c0 5.084 3.163 9.426 7.627 11.174-.105-.949-.2-2.405.042-3.441.218-.937 1.407-5.965 1.407-5.965s-.359-.719-.359-1.782c0-1.668.967-2.914 2.171-2.914 1.023 0 1.518.769 1.518 1.69 0 1.029-.655 2.568-.994 3.995-.283 1.194.599 2.169 1.777 2.169 2.133 0 3.772-2.249 3.772-5.495 0-2.873-2.064-4.882-5.012-4.882-3.414 0-5.418 2.561-5.418 5.207 0 1.031.397 2.138.893 2.738a.36.36 0 0 1 .083.345l-.333 1.36c-.053.22-.174.267-.402.161-1.499-.698-2.436-2.889-2.436-4.649 0-3.785 2.75-7.262 7.929-7.262 4.163 0 7.398 2.967 7.398 6.931 0 4.136-2.607 7.464-6.227 7.464-1.216 0-2.359-.631-2.75-1.378l-.748 2.853c-.271 1.043-1.002 2.35-1.492 3.146C9.57 23.812 10.763 24 12 24c6.627 0 12-5.373 12-12 0-6.628-5.373-12-12-12Z"
                   fill="#fff" /></svg>
             </a>
 
             <a class="network-link" href="#">
-              <svg class="network-icon" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
+              <svg class="network-icon" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0Zm0 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069ZM5.838 12a6.162 6.162 0 1 1 12.324 0 6.162 6.162 0 0 1-12.324 0ZM12 16a4 4 0 1 1 0-8 4 4 0 0 1 0 8Zm4.965-10.405a1.44 1.44 0 1 1 2.881.001 1.44 1.44 0 0 1-2.881-.001Z"
                   fill="#fff" /></svg>
